--- a/index.html
+++ b/index.html
@@ -3,20 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- TODO: Set the document title to the name of your application -->
-    <title>Lovable App</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    
+    <title>AgentWaala</title>
+    <meta name="description" content="AI-powered agent platform by nihal malviya and team" />
+    <meta name="keywords" content="nihal malviya ,nikhil singh rathore, nikochan, nikochan256, karan hajra, satyakam tyagi, agents, ai, agentwaala" />
+    <meta name="author" content="nihal malviya" />
 
-    <!-- TODO: Update og:title to match your application name -->
-    <meta property="og:title" content="Lovable App" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="AgentWaala" />
+    <meta property="og:description" content="AI-powered agent platform" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/og-image.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="AgentWaala" />
+    <meta name="twitter:description" content="AI-powered agent platform" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
+    <meta name="twitter:image" content="/og-image.png" />
   </head>
 
   <body>
